packages/kotlin/ttrp-frontend/src/test/resources/expr/negative/typ-widen.expr
account_id + balance
# expect: TTRP-TYP-001
